upgrade to java 25 and javafx 25